reword comment + minor refactoring